--- a/Semester Project/Flask-Interface/static/css/homestyle2.css
+++ b/Semester Project/Flask-Interface/static/css/homestyle2.css
@@ -1,43 +1,54 @@
-{% extends 'SearchSetup.html' %}
+/* ==========================
+   Base Styles
+========================== */
+body {
+    background-color: black; /* Set the page background to black */
+    color: white; /* Change text color to white for contrast */
+    margin: 0;
+    padding: 0;
+}
 
-{% block head %}
-    <title>Blackbird Search</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/searchStyle.css') }}">
-{% endblock %}
 
-{% block body %}
-<div class="img2">
-    <div class="images2">
-        <img src="{{ url_for('static', filename='Pictures/blackbird.png') }}" alt="class2" class="room2">
-    </div>
+.Buttom{
+    margin: 100px -75px;
+    position: absolute;
+}
 
-    <div class="input1">
-        <h1>Search Username/Email</h1>
-        <form action="/search" method="POST">
-            <label for="username" class="text2">Enter Username(s):</label>
-            <input type="text" id="username" name="username" class="text" placeholder="alice,bob,charlie"><br><br>
 
-            <label for="email" class="text2">Enter Email(s):</label>
-            <input type="email" id="email" name="email" class="text" placeholder="a@x.com,b@y.com"><br><br>
+/* ==========================
+   Link Button
+========================== */
+.Buttom .text {
+    text-decoration: none;
+    color: #810d0d; /* dark gray text */
+    font-size: 40px;
+    margin-top: 50px;
+    margin: 420px 590px;
+    padding: 8px 20px;
+    border: 2px solid #810d0d; /* gray border */
+    border-radius: 20px;
+    background-color: hsl(0, 88%, 3%); /* light gray button */
+    cursor: pointer;
+    font-family: 'Nosifer',sans-serif;
+ 
+}
 
-            <div class="ButtomEm">
-                <input type="submit" value="Search" class="text">
-            </div>
-        </form>
-    </div>
+  .img{
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        background-color: #000000; /* light gray background */
+    }
 
-    <div class="Results">
-        <h1>Search Results</h1>
-        {% if results %}
-            <ul>
-            {% for account in results %}
-                <li>{{ account['name'] }} - <a href="{{ account['url'] }}">{{ account['url'] }}</a> ({{ account['status'] }})</li>
-            {% endfor %}
-            </ul>
-        {% else %}
-            <p class="no-username-or-email-found">No data found. Please enter another username or email.</p>
-        {% endif %}
-        <a href="/" class="text">Back Home</a>
-    </div>
-</div>
-{% endblock %}
+    .images {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        flex-wrap: wrap;
+    }
+    .images img.room{
+    width: clamp(1000px, 400px, 900px);
+    margin: -35px 145px;
+    height: auto;
+}
