Update image source in HomePage template
Updated image source in HomePage.html.

--- a/Semester Project/templates/HomePage.html
+++ b/Semester Project/templates/HomePage.html
@@ -14,7 +14,7 @@
 <div class="img">
     <div class="images">
      <!--Change Background to what we chose-->
-    <img src="{{ url_for('static', filename='Pictures/Untitled7_20251209075801.PNG') }}" alt="class" class="room">
+    <img src="{{ url_for('static', filename='Pictures/Untitled7_20251209075801.PNG') }}" alt="class" class="room"> <!--  <------------------------------------- work on this picture, maybe add a background -->
 </div>
 <div class="Buttom">
     <a href="/search" class="text">Search</a>
