--- a/Semester Project/templates/Search.html
+++ b/Semester Project/templates/Search.html
@@ -8,7 +8,7 @@
 {% block body %}
 <div class="img2">
     <div class="images2">
-        <img src="{{ url_for('static', filename='Pictures/blackbird.png') }}" alt="class2" class="room2">
+        <img src="{{ url_for('static', filename='Pictures/blackbird.png') }}" alt="class2" class="room2"><!--  <------------------------------------- work on this picture, maybe add a background -->
     </div>
 
     <div class="input1">
@@ -41,3 +41,4 @@
     </div>
 </div>
 {% endblock %}
+
